# forge

./: .gitignore  README.md  main.py  models.py  pyproject.toml
.github/workflows/: check.yml
docs/: design.md
src/forge/: budget.py  cli.py  client.py  errors.py  execution.py  loop.py  models.py  registry.py  retry.py  state.py  streaming.py  tools.py
tests/: test_budget.py  test_cli.py  test_client.py  test_errors.py  test_loop.py  test_models.py  test_registry.py  test_request_models.py  test_retry.py  test_state.py  test_streaming.py  test_tools.py
tests/fixtures/: exercise_a_tool_use.json  exercise_b_tool_result_answer.json  exercise_c_no_tool.json  exercise_incomplete_response.json  streaming_text.sse  streaming_tool_use.sse  streaming_truncated_tool.sse  test_unknown_block_type_is_preserved.json
